[tool.poetry]
name = "ali-abdaal-chatbot"
version = "0.1.0"
description = ""
authors = ["Amine <anc.emails@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.14.1"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
