[tool.poetry]
name = "ali-abdaal-chatbot"
version = "0.1.0"
description = ""
authors = ["Amine <anc.emails@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.2"
tiktoken = "^0.6.0"
scipy = "^1.12.0"
openai = "0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
